<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sun_rise_set"
            android:icon="@drawable/sun_icon"
            android:title="@string/sun_fragment_name" />
        <item
            android:id="@+id/nav_choghadiya"
            android:icon="@drawable/choghadiya_icon"
            android:title="@string/choghadiya_fragment_name" />
        <item
            android:id="@+id/nav_hora"
            android:icon="@drawable/hora_icon"
            android:title="@string/hora_fragment_name" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/location_icon"
            android:title="@string/location_fragment_name" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language_fragment_name" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_action_name" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/privacy_and_policy" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us__activitty_name" />
        </menu>
    </item>

</menu>
