<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:conext=".Fragments.SunRiseSet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/date_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorAccent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <ImageButton
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/date" />

                    <TextView
                        android:id="@+id/cal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="12dp"
                        android:text="Wed 4 Apr 2019"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/sunImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/sun6"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:background="@drawable/sunrise"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="@string/sunrise"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"/>

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="06:00"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:background="@drawable/sunset"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="@string/sunset"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"/>

        <TextView
            android:id="@+id/sunset"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="06:00"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:background="@drawable/day"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="@string/day_length"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"/>

        <TextView
            android:id="@+id/day_length"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="06:00"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <ImageView
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:background="@drawable/night"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="@string/night_length"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"/>

        <TextView
            android:id="@+id/night_length"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:text="06:00"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choghadiya_text2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:layout_margin="5dp"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewSun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4521402201973005/1717763124">
    </com.google.android.gms.ads.AdView>

</LinearLayout>